# datakhanon

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
datakhanon/: .gitignore  core.py
datakhanon/model/: __init__.py  auto_trainer.py  base.py  experiment.py  exporter.py  metrics.py  model_spec.py  persistence.py  registry.py  report.py  selector.py  trainer.py  viz.py  wrappers.py
datakhanon/preprocess/: __init__.py  cleaning.py  encoders.py  features.py  imputers.py  preprocessor.py  reporter.py  utils.py
datakhanon/visualize/: __init__.py  eda.py  embeddings.py  explainability.py  interactive.py  plots.py
examples/: quickstart.py  quickstart_Auto.py  test_preprocess_pipeline.py  test_preprocess_profile.py  use_binary_auto.py  use_force_model.py  use_iris_auto.py  use_regression_auto.py  visualize_streamlit_app.py
scripts/: publish.sh
