[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datakhanon"
version = "0.1.2"
description = "Biblioteca para mineração de dados e aprendizado de máquina com fluxo end-to-end."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"

# SPDX expression + arquivos de licença
license = "MIT"
license-files = ["LICENSE"]

authors = [
  { name = "Vinicius de Souza Santos", email = "vinicius.santos@ifsp.edu.br" },
]

maintainers = [
  { name = "ViniciusKanh", email = "vinicius.santos@ifsp.edu.br" },
]

keywords = [
  "data-mining",
  "machine-learning",
  "feature-engineering",
  "preprocessing",
  "eda",
  "model-selection",
  "datakhanon",
]

# Dependências principais
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "joblib>=1.3",
  "PyYAML>=6.0",
  "imbalanced-learn>=0.12",
]

# Classifiers (mantidos, sem duplicar licença para evitar warnings)
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/ViniciusKanh/datakhanon"
"Bug Tracker" = "https://github.com/ViniciusKanh/datakhanon/issues"
Documentation = "https://github.com/ViniciusKanh/datakhanon"
Source = "https://github.com/ViniciusKanh/datakhanon"

# Expor um script CLI (opcional)
[project.scripts]
datakhanon = "datakhanon.cli:main"

# Optional dependencies (extras)
# OBS: evite dependências com URL direto — PyPI rejeita esses em metadata.
[project.optional-dependencies]
viz = [
  "plotly>=5.0",
  "bokeh>=3.0",
]
dashboard = [
  "streamlit>=1.30",
]
explainer = [
  "shap>=0.44",
]
embed = [
  "umap-learn>=0.5",
]
# se tiver um pacote privado "auto-ensemble-benchmark", não inclua como URL aqui;
# documente no README como instalar manualmente ou publique o dependente no PyPI.
ensemble = []

dev = [
  "black>=24.0",
  "isort>=5.13",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.8",
  "ipython>=8.0",
  "twine>=6.0",
  "build>=1.0",
]

# Setuptools-specific options
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["datakhanon*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
skip-string-normalization = true
